k8s/dashboard/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kubernetes-dashboard
  labels:
    app.kubernetes.io/part-of: platform-tools
    app.kubernetes.io/managed-by: argocd
